--- a/css/aboutStyle.css
+++ b/css/aboutStyle.css
@@ -1,13 +1,20 @@
 body {
     background-color: #434a54;
-    width:800px;
     margin-left: auto;
     margin-right: auto;
-    font-size: x-large;
 }
-.h1{
+h1 {
     color: #f6bb42;
 }
 .white{
     color:white;
+}
+
+.about {
+    color: white;
+}
+h5 {
+    color: #f6bb42;
+    text-align: center;
+    font-size: 20px;
 }
